--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Eduard\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mysql-connector-java-5.1.45-bin.jar=C:\\Users\\t-edpoes\\Development Software\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46.jar
+user.properties.file=C:\\Users\\t-edpoes\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
