--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,14 @@ dist.jar=${dist.dir}/Project_Planner.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.1.45-bin.jar=E:\\Development Software\\mysql-connector-java-5.1.45\\mysql-connector-java-5.1.45\\mysql-connector-java-5.1.45-bin.jar
+file.reference.mysql-connector-java-5.1.45-bin.jar-1=E:\\Development Software\\mysql-connector-java-5.1.45\\mysql-connector-java-5.1.45\\mysql-connector-java-5.1.45-bin.jar
 file.reference.mysql-connector-java-5.1.46.jar=C:\\Users\\t-edpoes\\Development Software\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.45-bin.jar}:\
-    ${file.reference.mysql-connector-java-5.1.46.jar}
+    ${file.reference.mysql-connector-java-5.1.46.jar}:\
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
