--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,3 @@
 compile.on.save=true
 file.reference.mysql-connector-java-5.1.45-bin.jar=C:\\Users\\t-edpoes\\Development Software\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46.jar
-file.reference.mysql-connector-java-5.1.45-bin.jar-1=C:\\Users\\t-edpoes\\Development Software\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46-bin.jar
-user.properties.file=C:\\Users\\t-edpoes\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Andrei Barbu\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
