--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.1.45-bin.jar=E:\\Development Software\\mysql-connector-java-5.1.45\\mysql-connector-java-5.1.45\\mysql-connector-java-5.1.45-bin.jar
 file.reference.mysql-connector-java-5.1.45-bin.jar-1=E:\\Development Software\\mysql-connector-java-5.1.45\\mysql-connector-java-5.1.45\\mysql-connector-java-5.1.45-bin.jar
+file.reference.mysql-connector-java-5.1.45-bin.jar-2=C:\\Program Files (x86)\\MySQL\\Connector J 5.1\\mysql-connector-java-5.1.45-bin.jar
 file.reference.mysql-connector-java-5.1.46.jar=C:\\Users\\t-edpoes\\Development Software\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.45-bin.jar}:\
     ${file.reference.mysql-connector-java-5.1.46.jar}:\
-    ${file.reference.mysql-connector-java-5.1.45-bin.jar-1}
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
